# mind-os-treehacks-2026

./: .gitignore  README.md
actions/: browser.py  cua.py  (+10 more)
silentpilot/: .env.example  CLAUDE_SESSION_NOTES.md  DATA_CAPTURE_PLAN.md  DEMO_IDEAS.md  HACKATHON_3SENSOR_PLAN.md  README.md  RESEARCH_REPORT.md  alterego_paper.md  docker-compose.yml  pyproject.toml
silentpilot/agent/: package-lock.json  package.json
silentpilot/agent/src/: command_router.ts  index.ts  orchestrator.ts  prompts.ts  state.ts
silentpilot/app_ui/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
silentpilot/app_ui/components/: CommandOverlay.tsx  ConfusionMatrix.tsx  PTTButton.tsx  SignalPlot.tsx
silentpilot/app_ui/lib/: api.ts  ws.ts
silentpilot/app_ui/pages/: calibrate.tsx  demo.tsx  index.tsx  train.tsx
silentpilot/app_ui/styles/: globals.css
silentpilot/emg_core/: config.py  pipeline.py
silentpilot/emg_core/api/: __init__.py  schemas.py  server.py
silentpilot/emg_core/dsp/: filters.py  normalize.py  segment.py
silentpilot/emg_core/ingest/: __init__.py  base_reader.py  mock_reader.py  packet_parser.py  serial_reader.py
silentpilot/emg_core/ml/: __init__.py  infer.py  model_io.py  train.py
silentpilot/firmware/emg_streamer/: emg_streamer.ino
silentpilot/mcp_server/: package-lock.json  package.json  verify_cursor.ts
silentpilot/mcp_server/src/: server.ts
silentpilot/scripts/: e2e_test.py  e2e_test_full.py  emguka_arch_compare.py  emguka_cnn.py  emguka_commands.py  emguka_llm_decode.py  emguka_phones.py  emguka_pipeline.py  emguka_synthetic.py
(+7360 files in other folders)
